test/fixture/invalid/relatedInformation.scrypt
contract SigHashPreimage {
    int x;

    public function add(int y) {
        require(y > 0);
    }
}
